--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "postinstall": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "build:annotations": "lerna run build --scope='*/annotations'",
     "build:axes": "lerna run build --scope='*/axes'",
@@ -41,41 +39,42 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.13.1",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-docs": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/react": "^6.1.20",
-    "@storybook/theming": "^6.1.20",
-    "@types/d3-array": "^2.9.0",
-    "@types/d3-dsv": "^2.0.1",
-    "@types/d3-force": "^2.1.1",
-    "@types/d3-format": "^2.0.0",
-    "@types/d3-interpolate": "^2.0.0",
-    "@types/d3-path": "^2.0.0",
-    "@types/d3-scale": "^3.2.2",
-    "@types/d3-selection": "^2.0.0",
-    "@types/d3-shape": "^2.0.0",
-    "@types/d3-time-format": "^3.0.0",
-    "@types/lodash.flattendeep": "^4.4.6",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "babel-loader": "^8.2.2",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "find-cache-dir": "3.3.1",
-    "lerna": "^6.6.2",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "@storybook/addon-actions": "^8.5.2",
+    "@storybook/addon-docs": "^8.5.2",
+    "@storybook/addon-essentials": "^8.5.2",
+    "@storybook/react-webpack5": "^8.5.2",
+    "@storybook/theming": "^8.5.2",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-dsv": "^3.0.7",
+    "@types/d3-force": "^3.0.10",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-path": "^3.1.0",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-shape": "^3.1.7",
+    "@types/d3-time-format": "^4.0.3",
+    "@types/lodash.flattendeep": "^4.4.9",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "babel-loader": "^9.2.1",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "find-cache-dir": "5.0.0",
+    "lerna": "^8.1.9",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.4.2",
     "react-docgen-typescript-loader": "^3.7.2",
-    "rimraf": "^5.0.0",
-    "source-map-loader": "^1.1.0",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.9.5"
+    "rimraf": "^6.0.1",
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@react-financial-charts/annotations": "file:packages/annotations",
