--- a/packages/interactive/tsconfig.json
+++ b/packages/interactive/tsconfig.json
@@ -13,7 +13,8 @@
         "outDir": "lib",
         "sourceMap": true,
         "strict": true,
-        "target": "es2017"
+        "target": "es2017",
+"types": ["react"]
     },
     "include": [
         "src"
