--- a/packages/tooltip/tsconfig.json
+++ b/packages/tooltip/tsconfig.json
@@ -4,7 +4,7 @@
         "declaration": true,
         "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "module": "esnext",
         "moduleResolution": "node",
         "noImplicitAny": true,
@@ -13,7 +13,8 @@
         "outDir": "lib",
         "sourceMap": true,
         "strict": true,
-        "target": "es2017"
+        "target": "es2017",
+        "types": ["react"]
     },
     "include": [
         "src"
